tests/snapshots/test_runner__tests__compiler__typecheck__top_level_expression_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo = (null: Null): Integer => 123

null.foo()
// Error: expected Null but got Integer

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/top_level_expression_1.kk:3:1
  │
3 │ null.foo()
  │ ^^^^^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Null        | + Integer   |
    +---------------+-------------+
